[tool.poetry]
name = "bigdata-intern-test"
version = "0.1.0"
description = ""
authors = ["hermeschen1116 <108386417+hermeschen1116@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.24.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
