[tool.poetry]
name = "bigdata-intern-test"
version = "0.1.0"
description = ""
authors = ["hermeschen1116 <108386417+hermeschen1116@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
